feat: restaurant delete API 作成
